--- a/5.5 bootstrap task 1/index.html
+++ b/5.5 bootstrap task 1/index.html
@@ -15,10 +15,22 @@
       .box {
         height: 100px;
       }
+
+      .small {
+        height: 100px;
+      }
+
+      .medium {
+        height: 250px;
+      }
+
+      .large {
+        height: 500px;
+      }
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <!-- <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">PF-302</a>
         <button
@@ -150,8 +162,21 @@
         <div class="col-6 box bg-danger-subtle"></div>
         <div class="col-6 box bg-secondary-subtle"></div>
       </div>
-    </div>
+    </div> -->
 
+    <div class="row">
+      <div class="col-9">
+        <div class="row">
+          <div class="col-4 bg-primary medium"></div>
+          <div class="col-8 bg-info medium"></div>
+        </div>
+        <div class="row">
+          <div class="col-4 bg-warning medium"></div>
+          <div class="col-8 bg-success medium"></div>
+        </div>
+      </div>
+      <div class="col-3 bg-black large"></div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
